--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,43 @@
-alembic==1.5.4
-attrs==20.3.0
-autopep8==1.5.5
-certifi==2020.12.5
-chardet==4.0.0
-click==7.1.2
-Flask==1.1.2
-Flask-Migrate==2.6.0
-Flask-SQLAlchemy==2.4.4
+appnope==0.1.2
+astroid==2.5
+attrs==21.2.0
+autopep8==1.5.7
+backcall==0.2.0
+certifi==2021.10.8
+charset-normalizer==2.0.7
+decorator==4.4.2
 gunicorn==20.1.0
-idna==2.10
+idna==3.3
 iniconfig==1.1.1
-itsdangerous==1.1.0
-Jinja2==2.11.3
-Mako==1.1.4
-MarkupSafe==1.1.1
-packaging==20.9
-pluggy==0.13.1
-psycopg2-binary==2.8.6
+ipykernel==5.5.0
+ipython==7.20.0
+ipython-genutils==0.2.0
+isort==5.7.0
+jedi==0.18.0
+jupyter-client==6.1.11
+jupyter-core==4.7.1
+lazy-object-proxy==1.5.2
+mccabe==0.6.1
+packaging==21.0
+parso==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
+pluggy==1.0.0
+prompt-toolkit==3.0.16
+ptyprocess==0.7.0
 py==1.10.0
-pycodestyle==2.6.0
+pycodestyle==2.7.0
+Pygments==2.8.0
+pylint==2.7.0
 pyparsing==2.4.7
-pytest==6.2.3
+pytest==6.2.5
 python-dateutil==2.8.1
-python-dotenv==0.15.0
-python-editor==1.0.4
-requests==2.25.1
+pyzmq==22.0.3
+requests==2.26.0
 six==1.15.0
-SQLAlchemy==1.3.23
 toml==0.10.2
-urllib3==1.26.4
-Werkzeug==1.0.1
+tornado==6.1
+traitlets==5.0.5
+urllib3==1.26.7
+wcwidth==0.2.5
+wrapt==1.12.1
